# dora-poc

./: Cargo.toml  README.md
.github/workflows/: ci.yml  deploy_mdbook.yml  release.yml
apis/python/: Cargo.toml
apis/rust/: Cargo.toml
apis/rust/src/: lib.rs
binaries/cli/: Cargo.toml
binaries/cli/src/: check.rs  distribute.rs  lib.rs  list.rs  main.rs  validate.rs
binaries/tui/: Cargo.toml
docs/: book.toml
examples/talker-listener/: Cargo.toml  dataflow.yml  narr.yml
examples/talker-listener-python/: dataflow.yml
examples/talker-listener/nodes/listener/: Cargo.toml  narr.yml
examples/talker-listener/nodes/talker/: Cargo.toml  narr.yml
examples/talker_listener/: Cargo.toml
libraries/core/: Cargo.toml
libraries/core/src/: address.rs  application.rs  daemon.rs  lib.rs  machine.rs  node.rs
libraries/core/src/daemon/: address.rs
libraries/core/src/machine/: address.rs
libraries/core/src/node/: inputs.rs  outputs.rs
libraries/daemon/: Cargo.toml
libraries/daemon-communication/: Cargo.toml
libraries/daemon-communication/src/: lib.rs
libraries/daemon/src/: daemon_files_handler.rs  daemon_queries_handler.rs  daemon_to_daemon.rs  dataflow_queries_handler.rs  event.rs  handler.rs  lib.rs  queries.rs
libraries/daemon/src/daemon_queries_handler/: check.rs  files.rs
libraries/daemon/src/handler/: check.rs  files_handler.rs  queries_handler.rs
libraries/daemon/src/handler/queries_handler/: check.rs  files.rs
libraries/node-communication/: Cargo.toml
libraries/parser/: Cargo.toml
libraries/parser/src/: lib.rs
