[workspace]
members = [
    "apis/python",
    "apis/rust",

    "binaries/cli",
    "binaries/tui",
    "libraries/core",

    "libraries/daemon",
    "libraries/daemon-communication",
    "libraries/node-communication",
    "libraries/parser",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
description = "The Narr project is a declarative framework for creating and distributing applications that are made of nodes that communicate with each other."
edition = "2021"
documentation = "https://hennzau.github.io/narr"
license = "Apache-2.0"
repository = "https://github.com/Hennzau/narr"

[workspace.dependencies]
narr-daemon = { path = "libraries/daemon" }
narr-daemon-communication = { path = "libraries/daemon-communication" }
narr-node-communication = { path = "libraries/node-communication" }
narr-parser = { path = "libraries/parser" }
narr-core = { path = "libraries/core" }

narr-rs = { path = "apis/rust" }

eyre = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
zenoh = { version = "1.0.0", features = ["internal", "shared-memory"] }

[workspace.metadata.dist]
cargo-dist-version = "0.22.1"
ci = "github"
installers = ["shell", "powershell"]
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-unknown-linux-musl",
    "x86_64-pc-windows-msvc",
]
install-path = "CARGO_HOME"
install-updater = false

[profile.dist]
inherits = "release"
lto = "thin"
