[package]
name = "narr-cli"
version.workspace = true
description.workspace = true
edition.workspace = true
documentation.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
eyre = { workspace = true }
tokio = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

narr-rs = { workspace = true }

clap = { version = "4.5.20", features = ["derive"] }

zenoh = { workspace = true }
serde_json = "1.0.132"

rkyv = { workspace = true }
