[package]
name = "narr-cli"
version.workspace = true
description.workspace = true
edition.workspace = true
documentation.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
eyre = { workspace = true }
tokio = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

narr-rs = { workspace = true }

clap = { version = "4.5.20", features = ["derive"] }
comfy-table = "7.1.3"

serde_json = { workspace = true }
zenoh = { workspace = true }
