[workspace]
members = ["nodes/talker", "nodes/listener"]
resolver = "2"

[workspace.package]
version = "0.1.0"
description = "Example of a dpoc application."
edition = "2021"
documentation = ""
license = "Apache-2.0"
repository = "https://github.com/Hennzau/dpoc"

[workspace.dependencies]

[dpoc]
# The name of the application
name = "MyApplication"

# On which interface and port the local daemon should start ?
local = "udp/127.0.0.1:7447"

# Precise the working directory the application should be run in
working_directory = "/Users/enzolevan/Downloads/talker_listener"

# You can define a remote daemon, all nodes tagged with this remote will be run on this daemon
[[dpoc.remote]]
# The name of the remote daemon
label = "LAPTOP"

# The endpoint should be the same as the listening address of the remote daemon
endpoint = "udp/10.0.0.3:7447"

# The working directory, on the remote machine, where the application should be run
working_directory = "/home/enzo/Downloads/talker_listener"

# This is the list of nodes that compose the application
[[dpoc.node]]
# The name of the node
id = "talker"

build = "cargo build -p talker --release" # The build command of the node, if not specified, nothing will be built before running the node
run = "cargo run -p talker --release"     # The run command of the node, if not specified, nothing will be run

# Define inputs and outputs of the node
inputs = []
outputs = ["message"]

[[dpoc.node]]
# The name of the node
id = "listener"

# You can specify the remote on which the node should be run, if not specified, the node will be run on the local daemon
remote = "LAPTOP"

build = "cargo build -p listener --release" # The build command of the node, if not specified, nothing will be built before running the node, for remote nodes, the build command will NOT be run on the remote machine
distribute = "target/release/listener"      # The path to the binary that should be copied to the remote machine
run = "nodes/listener"                      # The run command of the node, if not specified, nothing will be run. It's the command that will be run on the remote machine after

# Define inputs and outputs of the node
inputs = ["talker/message"]
outputs = []
