[package]
name = "narr-daemon-communication"
version.workspace = true
description.workspace = true
edition.workspace = true
documentation.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
eyre = { workspace = true }
tokio = { workspace = true }
zenoh = { workspace = true }

tracing = { workspace = true }
