[package]
name = "narr-daemon"
version.workspace = true
description.workspace = true
edition.workspace = true
documentation.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
eyre = { workspace = true }
tokio = { workspace = true }

tracing = { workspace = true }

narr-daemon-communication = { workspace = true }
narr-node-communication = { workspace = true }
narr-core = { workspace = true }
