[package]
name = "narr-daemon"
version.workspace = true
description.workspace = true
edition.workspace = true
documentation.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
eyre = { workspace = true }
tokio = { workspace = true }
rkyv = { workspace = true }

tracing = { workspace = true }

serde_json = "1.0.132"

narr-core = { workspace = true }
zenoh = { workspace = true }
