[package]
name = "narr-daemon"
version.workspace = true
description.workspace = true
edition.workspace = true
documentation.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
eyre = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

narr-core = { workspace = true }
narr-parser = { workspace = true }

zenoh = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
