[package]
name = "narr-parser"
version.workspace = true
description.workspace = true
edition.workspace = true
documentation.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
eyre = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

toml = "0.8"
rand = "0.8.5"

narr-core = { workspace = true }
serde_json = "1.0.132"
serde_derive = "1.0.214"
serde = { version = "1.0.214", features = ["derive"] }
