[package]
name = "narr-parser"
version.workspace = true
description.workspace = true
edition.workspace = true
documentation.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
eyre = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

narr-core = { workspace = true }

serde = { version = "1.0.214", features = ["derive"] }
serde_yaml = "0.9"
regex = "1"
